# chainrule

./: .editorconfig  Cargo.toml  README.md
chainrule-macros/: Cargo.toml
chainrule-macros/src/: lib.rs
src/: context.rs  graph.rs  identity.rs  lib.rs  tracer.rs
src/ops/: add.rs  broadcast.rs  constant.rs  div.rs  exp.rs  input.rs  log.rs  matmul.rs  max.rs  mean.rs  mod.rs  mul.rs  neg.rs  relu.rs  reshape.rs  sub.rs  sum.rs  transpose.rs
src/tracing/: function.rs  mod.rs  session.rs  tracer.rs
