[package]
name = "chainrule"
version = "0.1.0"
edition = "2024"
description = "A minimal automatic differentiation library in Rust, inspired by the functional, composable architecture of JAX."
repository = "https://github.com/rawcptr/chainrule"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["autograd", "autodiff", "numeric"]


[features]
nightly-fn = []

[dependencies]
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
num-traits = "0.2.19"
chainrule-macros = { path = "chainrule-macros" }

[workspace]
members = ["chainrule-macros"]
